add web pages  and infratructre for pitches and viewing categories

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,10 @@
 
 <!-- Content block -->
 {% block content %}
-
+<!-- sumbit a new pitch according to a given userid -->
+<li class="text-center">
+    <a href="/submitpitch/1234">Add new pitch</a>
+</li>
 <!-- Display all pitches-->
 <h3> Pitches</h3>
 <ul>
