--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -21,6 +21,9 @@
               <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
               {%endif%}
             </ul>
+            <ul class="nav navbar-nav">
+              <li><a href="/submitpitch/1234">Add a new pitch</a></li>
+            </ul>
         </div>
 
     </div>
