--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -6,11 +6,12 @@
 <div class="row">
 <!-- displaying  Username-->
   <div class="col-md-6">
-    <h3> Your profile </h3>
-    <h3> {{user.username| capitalize}} </h3>
+    <h3> Your profile: </h3>
+    <h3> Name: {{user.username| capitalize}} </h3>
 
     <!--Displaying user bio-->
     {% if user.bio %}
+      <h4> About me: </h4>
       <p> {{user.bio}}</p>
     {%else%}
       <p> {{user.username| capitalize}} has no bio </p>
