add working comment function

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,14 +5,17 @@
 {% block content %}
 <!-- Display all pitches-->
 <h3>All Pitches</h3>
+  <hr>  <hr>
 <!--Display pitches-->
 <div class="col-md-12">
   {% if pitches %}
-      {% for review in pitches %}
+      {% for p in pitches %}
       <div class="col-md-6 col-lg-6 review-card">
-          <h2> {{ review.pitch_title}} </h2>
-          <p> Category: {{review.pitch_category}} | View more <a href="/category/{{review.pitch_category}}"> {{review.pitch_category}} </a> pitches </p>
-          <p> Description: {{ review.pitch_description }}</p>
+          <h2> {{ p.pitch_title}} </h2>
+          <p> Category: {{p.pitch_category}} | View more <a href="/category/{{p.pitch_category}}"> {{p.pitch_category}} </a> pitches </p>
+          <p> Description: {{ p.pitch_description }}</p>
+          <p> <a href="/viewpitch/{{p.id}}"> View & add comments </a> </p>
+                <hr>
       </div>
       {% endfor %}
   {%else%}
