--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -6,18 +6,16 @@
   <div class="row">
       <div class="col-md">
 
-    <h1>Categories</h1>
+    <h1>Pitches according to the {{ category }} category</h1>
         <hr>
             <a class="btn btn-success btn-lg text-center" href="/submitpitch/1234"> Write a new pitch</a>
       </div>
       <!--Display pitches categories-->
         <div class="col-md-12">
-          <h3> Your pitches </h3>
           {% if pitches %}
               {% for review in pitches %}
               <div class="col-md-6 col-lg-6 review-card">
                   <h2> {{ review.pitch_title}} </h2>
-                  <p> Category: {{review.pitch_category}} </p>
                   <p> Description: {{ review.pitch_description }}</p>
               </div>
               {% endfor %}
