--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -6,7 +6,7 @@
 <div class="row">
 <!-- displaying  Username-->
   <div class="col-md-6">
-    <h3> Your profile: </h3>
+    <h2> Your profile </h2>
     <h3> Name: {{user.username| capitalize}} </h3>
 
     <!--Displaying user bio-->
@@ -34,7 +34,7 @@
         </div>
         {% endfor %}
     {%else%}
-    <p>Pitches doesn't work</p>
+    <p>Either you have no Pitches, or an error occured</p>
     {% endif %}
   </div>
 </div>
