--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,15 +11,17 @@
   {% if pitches %}
       {% for p in pitches %}
       <div class="col-md-6 col-lg-6 review-card">
-          <h2> {{ p.pitch_title}} </h2>
-          <p> Category: {{p.pitch_category}} | View more <a href="/category/{{p.pitch_category}}"> {{p.pitch_category}} </a> pitches </p>
-          <p> Description: {{ p.pitch_description }}</p>
+          <p><span style="font-weight: bold"> Title: </span> {{ p.pitch_title}} </p>
+          <p style="font-weight: bold"> Category </p>
+          <p> {{p.pitch_category}} | View more <a href="/category/{{p.pitch_category}}"> {{p.pitch_category}} </a> pitches </p>
+          <p style="font-weight: bold"> Description </p>
+          <p>  {{ p.pitch_description }}</p>
           <p> <a href="/viewpitch/{{p.id}}"> View & add comments </a> </p>
                 <hr>
       </div>
       {% endfor %}
   {%else%}
-  <p>Pitches doesn't work</p>
+  <p>There are no pitches yet. Please log in and submit some pitches</p>
   {% endif %}
 </div>
 
