--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -5,8 +5,9 @@
 <div class="container">
 <div class="row">
 <!-- displaying  Username-->
-  <div class="col-md-6">
+  <div class="col-md-3">
     <h2> Your profile </h2>
+    <hr>
     <h3> Name: {{user.username| capitalize}} </h3>
 
     <!--Displaying user bio-->
@@ -14,7 +15,7 @@
       <h4> About me: </h4>
       <p> {{user.bio}}</p>
     {%else%}
-      <p> {{user.username| capitalize}} has no bio </p>
+      <p> You have no bio </p>
     {% endif %}
 
       {% if user == current_user %}
@@ -23,14 +24,19 @@
   </div>
 
   <!--Display pitches-->
-  <div class="col-md-6">
-    <h3> Your pitches </h3>
+  <div class="col-md-9">
+    <h2> Your pitches </h2>
+    <hr>
     {% if pitches %}
-        {% for review in pitches %}
+        {% for p in pitches %}
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 review-card">
-            <h2> {{ review.pitch_title}} </h2>
-            <p> Category: {{review.pitch_category}} </p>
-            <p> Description: {{ review.pitch_description }}</p>
+            <p style="font-weight: bold"> Title </p>
+            <p> {{ p.pitch_title}} </p>
+            <p style="font-weight: bold"> Category </p>
+            <p> {{p.pitch_category}} | <a href="/category/{{p.pitch_category}}"> View more </a> </p>
+            <p style="font-weight: bold"> Description </p>
+            <p>  {{ p.pitch_description }}</p>
+            <p> <a href="/viewpitch/{{p.id}}"> View & add comments </a> </p>
         </div>
         {% endfor %}
     {%else%}
