--- a/app/templates/viewpitch.html
+++ b/app/templates/viewpitch.html
@@ -6,14 +6,27 @@
 
         <div class="col-md-8">
 
-            <h2> Your pitch </h2>
-            <h3> Title: {{pitches.pitch_title| capitalize}} </h3>
+            <h2> {{pitches.pitch_title| capitalize}} </h2>
+
+            <hr>
 
             <!--Displaying pitch info-->
             {% if pitches %}
               <h4> Category: <a href="/category/{{pitches.pitch_category}}"> {{pitches.pitch_category}}</a></h4>
               <br>
-              <p> Description: {{pitches.pitch_description}}</p>
+              <p style="font-weight: bold;"> Description </p>
+              <p> {{pitches.pitch_description}}</p>
+
+              <p style="align: right"> Votes: {{pitches.pitch_votes}} </p>
+
+            <div class="row">
+              <div class="col-md-2">
+                {{ wtf.quick_form(form2) }}
+              </div>
+              <div class="col-md-2">
+                {{ wtf.quick_form(form3) }}
+              </div>
+            </div>
             {%else%}
               <p> Something went wrong</p>
             {% endif %}
@@ -26,7 +39,7 @@
                     {% if user%}
                       {%for u in user%}
                         {% if c.user_id == u.id%}
-                          <h5> Author: {{u.username}} </h5>
+                          <h5 style ="font-style: italic;"> Author: {{u.username}} </h5>
                         {% endif %}
                       {% endfor %}
                     {% endif %}
